# bazl

./: CMakeLists.txt  README.md  test.test
boot_loader/: CMakeLists.txt
boot_loader/src/: boot_loader.asm
cmake/: Bazl.cmake  BazlTestImage.cmake  Hex.cmake  Kernal.cmake
kernal/: CMakeLists.txt
kernal/cmake/: C.cmake  Link.cmake  Nasm.cmake
kernal/src/: kernal_loader.asm  main.c  sys_call.asm
kernal/src/core/: string.c  string.h  types.h
kernal/src/int/: cli.asm  disk.asm
kernal/src/io/: cli.asm  cli.c  cli.h  disk.asm  disk.c  disk.h  standard_io.asm  standard_io.h
kernal/src/io/disk/: fs.c  fs.h
kernal/src/mem/: dyn.c  dyn.h
kernal/src/memory/: dyn.c  dyn.h  dynamic.c  dynamic.h
kernal/src/sys_call/: cli.asm  disk.asm  mem.asm
kernal/src/utils/: bool.h  buf.c  buf.h  int.h  ptr.h  str.c  str.h  string.c  string.h
scripts/: build-make.sh  build-ninja.sh  build.sh  convert-bazl-file.sh  test-qemu.sh
